<resources>
    <string name="app_name">Drexel Rec Center</string>
    <string name="hfw">Health Fitness Wellness</string>
    <string name="is">Intramural Sports</string>
    <string name="cs">Club Sports</string>
    <string name="Rf">Recreational Facilities</string>
    <string name="el">Experiential Learning</string>
    <string name="intro">Introduction</string>
    <string name="rf_intro">Recreation Center 33rd and Market Streets</string>
    <string name="rf_intro1">215-571-3777</string>
    <string name="rf_intro2">recathletics@drexel.edu</string>
    <string name="rf_intro3">Recreational Athletics manages and maintains all of Drexel University’s indoor and outdoor sports and recreation fields and facilities as listed below.\n\nClick on individual facilities for play hours and facility resevation contact information.</string>
    <string name="rc">Recreation Center</string>
    <string name="dac">Daskalakis Athletic Center</string>
    <string name="bcaa">Buckley Courts at Armory</string>
    <string name="brf">Buckley Recreational Field</string>
    <string name="tc">Tennis Courts</string>
    <string name="kssc">Kline And Specter Squash Center</string>
    <string name="vac">Vidas Athletic Complex</string>
    <string name="fachours">Facility Hours</string>
    <string name="alarm">Set Alarm</string>
    <string name="recmap">Rec Center Map</string>
    <string name="intsport">Intramural Sports</string>
    <string name="sportoff">Sports Offered</string>
    <string name="insp_intro1">Intramural Sports Office</string>
    <string name="insp_intro2">Recreation Center - Rec Athletics Office Suite, 1st Floor</string>
    <string name="insp_intro3">215-895-2676</string>
    <string name="insp_intro4">intramurals@drexel.edu</string>
    <string name="insp_intro5">The Intramural Sports Program is designed to offer various leagues, tournaments, one-day events, and special events throughout the year to serve a large and diverse student body. To meet the mission of the Recreational Athletics Office, we have policies and procedures to be followed to ensure fair play, sportsmanship, and good will among all participants and staff. We aim to provide student development opportunities through participation - both as a player and as an employee - within the entire program. We strive to make the Intramural Sports program a positive addition to the Drexel experience.</string>
    <string name="insp_intro6">\nHow Do I Sign Up?</string>
    <string name="insp_intro7">Participants including students, faculty and staff can sign up for a variety of intramural league sports, tournaments and special recreational events.</string>
    <string name="Su">Sign Up! (IMLeagues)</string>
    <string name="ls">List of League Sports</string>
    <string name="insp_intro8">Individuals and/or teams will need to register by the league scheduling deadline, listed above. No changes to the roster (which includes an assumption of risk, waiver and release statement) will be permitted after regular season games have concluded. Any team that submits a roster after the scheduling deadline will be placed on a waiting list.</string>
    <string name="insp_intro9">Click here for instructions on how to sign up.</string>
    <string name="insp_intro10">\nIndividuals without a team may be placed on a team by signing up as a Free Agent. Free agents will be placed on teams that request additional players through the Recreational Athletics.</string>
    <string name="insp_intro11">Note: Placement on a team is not guaranteed.</string>
    <string name="site_key">6LfE3DkUAAAAADc0dkVtSSNRT-sPEnVsxXRgKZnx</string>
    <string name="reg">Create Account</string>
    <string name="login">Login</string>
    <string name="alacc">\nAlready Have An Account?</string>
    <string name="imleagues">IMLeagues</string>
    <string name="imldesc">\nIMLeagues makes playing intramurals, fitness, and club sports much more fun for participants by giving them access to a vast array of interactive features, essentially turning each participant into a fantasy player with lifetime stats, trophies, and achievements!</string>
    <string name="clicklogo">\nGain access by clicking the button below:</string>
    <string name="forms">Forms</string>
    <string name="hfw_intro">The Health, Fitness and Wellness office is committed to helping students develop a balanced lifestyle that includes an emphasis on the body, mind, and spirit. Drexel Recreation takes pride in the health and quality of life of each individual student, working to help them grow outside of the classroom. By offering a multifaceted approach to wellness, we hope to reach each student during their time at Drexel.</string>
    <string name="hfw_intro2">\nPrograms include, but are not limited to:</string>
    <string name="hfw_intro3">\nThe Health, Fitness and Wellness office is located on the 3rd floor of the Recreation Center, Room 309a. Coming up the stairs, or off the elevator - turn left and walk towards the 33rd Street side. Our office will be on your left before you turn the corner!</string>
    <string name="hfw_intro4">Group Exercise classes at the Drexel Recreation Center are available every day of the week throughout each term. A variety of classes will help get you moving and increase your well-being. For a full list of classes, check out our Group Exercise page. All classes are geared for the beginner and intermediate level of participation and instructors are skilled in adapting classes as necessary to meet the level of the participants.</string>
    <string name="hfw_intro5">A variety of programming is offered each term for students to develop lifelong healthy habits. Examples of programming offered includes: Fitness assessments, nutrition consultations, and on-demand workshops delivered to your door. All programming is complementary to students and tailored to the audience in mind.</string>
    <string name="ge_intro1">\nGroup Exercise classes at the Drexel Recreation Center offer participants the opportunity to work out under the guidance of nationally certified instructors that emphasize fun, safety, and wellness. Class favorites include: BodyPump™, Pilates, Cycle, Yoga, and Cardio \'n\' Tone. Classes are free to students, faculty and staff, and Recreation Center members.</string>
    <string name="ge_intro2">\nBefore a participant\'s first class during a calendar year, a waiver of liability is required to be completed. All classes are held in studio 216 and studio 218 on the 2nd floor of the Recreation Center.</string>
    <string name="ge_intro3">\nGroup Exercise classes are first come first serve, with the exception of Body Pump™ and Cycle. Below is the link to sign up for the two classes.</string>
    <string name="ge_intro4">Book your spot in a group exercise class online! You will be able to reserve a spot in BodyPump™, Cycling and Barre. Reservations are for weekdays in the afternoon and evening only. All reservations are on a first-come, first-serve basis. Reservations open 48 hours in advance and close 1 hour prior to class start.</string>
    <string name="daccmap">Da Center Map</string>
    <string name="Fachours">Facility Hours</string>
    <string name="Armoryhours">Facility Hours</string>
    <string name="eventservice">Facility Hours</string>
    <string name="moreinformation">Facility Hours</string>

</resources>
