<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:textAlignment="center"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/app_name"
        app:logo="@drawable/dragonblue"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:showAsAction="always|withText"
        app:title="@string/app_name"
        android:background="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <Button
        android:id="@+id/button_rf"
        android:text="@string/Rf"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="198dp" />

    <Button
        android:id="@+id/button_is"
        android:text="@string/is"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:backgroundTint="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="198dp" />

    <Button
        android:id="@+id/button_cs"
        android:text="@string/cs"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:backgroundTint="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="198dp" />

    <Button
        android:id="@+id/button_hfw"
        android:text="@string/hfw"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:backgroundTint="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="198dp" />


</LinearLayout>
